--- a/assets/default.scss
+++ b/assets/default.scss
@@ -54,3 +54,32 @@
     margin: 0 auto;
   }
   
+  //bu diğer projelerden gelen 
+  .container-md{
+    max-width: 1200px !important;
+  }
+  
+  .container-lg{
+    max-width: 1280px !important;
+  }
+  
+  .container-xl{
+    max-width: 1440px !important;
+  }
+  .container-navbar{
+    max-width: 1360px !important;
+  }
+  .img-fluid{
+    height: auto;
+    max-width: 100%;
+  }
+  
+  body{
+    //font-family: Cabin-Regular;
+    //color: #1D1E1F;
+  
+    a{
+      //color: #1D1E1F;
+      text-decoration: none;
+    }
+  }
